--- a/allenz_sc/pom.xml
+++ b/allenz_sc/pom.xml
@@ -76,6 +76,19 @@
             </exclusions>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+                <verbose>true</verbose>
+                <encoding>UTF-8</encoding>
+            </configuration>
+        </plugin>
+        </plugins>
+    </build>
 
 </project>
